avoid images overflow in section

--- a/chamber/styles/layout.css
+++ b/chamber/styles/layout.css
@@ -164,6 +164,11 @@
     section {
         background-color: white;
     }
+
+    section img {
+        max-width: 100%;
+    }
+
 }
 
 @media screen and (min-width:800px) {
